[package]
name = "client"
version = "0.1.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
edition = "2018"

[dependencies]
common = { path = "../common/" }
futures = "0.3.12"
jsonrpc-http-server = "17.0.0"
nix = "0.19.1"
reqwest = "0.11.0"
scheduler = { path = "../scheduler/" }
serde = { version = "1.0.122", features = ["serde_derive"] }
tokio = { version = "0.2", features = ["time"]}
tracing = "0.1.22"
tracing-futures = "0.2.4"
chrono = "0.4.19"
fs2 = "0.4.3"
thiserror = "1.0.24"
jsonrpc-core = "17.0.0"
jsonrpc-core-client = { version = "17.0.0", features = ["http"] }
rust-gpu-tools = { version = "0.3.0", git = "https://github.com/Zondax/rust-gpu-tools.git" , branch = "unique_id" , features = ["serde_support"]}

[dev-dependencies]
ipmpsc = "0.5.0"
rand = "0.8.2"
tracing-appender = "0.1.2"
tracing-subscriber = {version = "0.2.15", default-features = true}

[features]
default = ["greedy_solver"]
mip_solver = ["scheduler/mip_solver"]
greedy_solver = ["scheduler/greedy_solver"]
