[package]
name = "client"
version = "0.1.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
edition = "2018"

[dependencies]
common = { path = "../common/" }
futures = "0.3.15"
jsonrpc-http-server = "17.1.0"
nix = "0.22.0"
reqwest = "0.11.4"
scheduler = { path = "../scheduler/" }
serde = { version = "1.0.126", features = ["serde_derive"] }
tokio = { version = "0.2", features = ["time"] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
chrono = "0.4.19"
fs2 = "0.4.3"
thiserror = "1.0.26"
jsonrpc-core = "17.1.0"
jsonrpc-core-client = { version = "17.1.0", features = ["http"] }
rust-gpu-tools = { version = "0.3.0", git = "https://github.com/Zondax/rust-gpu-tools.git" , branch = "unique_id" , features = ["serde_support"]}

[dev-dependencies]
ipmpsc = "0.5.1"
rand = "0.8.4"
tracing-appender = "0.1.2"
tracing-subscriber = { version = "0.2.19", default-features = true }
