[package]
name = "client"
version = "0.1.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
edition = "2018"

[dependencies]
nix = "0.22.0"
scheduler = { path = "../scheduler/", optional = true}
tokio_02 = { package = "tokio", version = "0.2", features = ["time", "rt-threaded"]}
tracing = "0.1.26"
fs2 = "0.4.3"
thiserror = "1.0.26"
jsonrpc-core-client = { version = "17.1.0", features = ["http"]}
once_cell = "1.8.0"
dirs = "3.0.2"

[dev-dependencies]
criterion = "0.3.4"
ipmpsc = "0.5.1"
#tracing-appender = "0.1.2"
tracing-subscriber = { version = "0.2.19", default-features = true }
serde = { version = "1.0.120", features = ["serde_derive"] }
chrono = { version = "0.4.19", features = ["serde"] }

[features]
default = ["opencl"]
cuda = ["scheduler/cuda"]
opencl = ["scheduler/opencl"]

[[bench]]
name = "schedule_one_of"
harness = false
