[package]
name = "monitor"
version = "0.1.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
edition = "2018"

[dependencies]
jsonrpc_client = { version = "0.5.1", features = ["reqwest"] }
reqwest = "0.11.0"
clap = "2.33.3"
colorful = "0.2.1"
anyhow = "1.0.40"
scheduler = { path = "../scheduler/" }
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
futures = "0.3.12"
tui = "0.14.0"
termion = "1.5.6"
chrono = "0.4.19"
serde = { version = "1.0.120", features = ["serde_derive"] }
