[package]
name = "scheduler"
version = "0.1.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }
futures = "0.3.12"
jsonrpc-core = "17.0.0"
jsonrpc-derive = "17.0.0"
jsonrpc-http-server = "17.0.0"
serde = { version = "1.0.120", features = ["serde_derive"] }
coin_cbc = {version = "0.1.3", optional = true}
itertools = "0.10.0"
array_tool = "1.0.3"
more-asserts = "0.2.1"
tokio = "1.2.0"
tracing = "0.1.22"
tracing-futures = "0.2.4"
priority-queue = "1.0.5"
chrono = { version = "0.4.19", features = ["serde"] }


[features]
default = ["greedy_solver"]
mip_solver = ["coin_cbc"]
greedy_solver = []
